--- a/go/BUILD.gn
+++ b/go/BUILD.gn
@@ -7,6 +7,10 @@ group("go") {
 
 action("build_http_proxy") {
   script = "build_http_proxy.py"
+  goarch = current_cpu
+  if (current_cpu == "x64") {
+    goarch = "amd64"
+  }
   if (os == "win") {
     ext = ".exe"
   } else {
@@ -18,6 +22,8 @@ action("build_http_proxy") {
   ]
   outputs = [ "$root_out_dir/http_proxy" + ext ]
   args = [
+           "--goarch",
+           goarch,
            "--cache-dir",
            rebase_path("$root_out_dir/gocache"),
            "--output",
