goma client needs Mac-10.15
luci.flex.try pool has various os:Mac bots,
but goma client can't be compiled on os:Mac-10.13.

Use os:Mac-10.15 for goma client mac

Change-Id: I04defaa39cf6a3ab143480d6a091189adf6ee033

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -51,7 +51,7 @@ buckets {
     }
     builders {
       name: "mac_rel"
-      dimensions: "os:Mac"
+      dimensions: "os:Mac-10.15"
     }
     builders {
       name: "win_rel"
@@ -89,7 +89,7 @@ buckets {
     }
     builders {
       name: "mac_rel"
-      dimensions: "os:Mac"
+      dimensions: "os:Mac-10.15"
     }
     # When Win7 bot is allocated, gclient fails. For mitigation,
     # we allocate only Windows-10. See crbug.com/800246
