Import changes for goma client
  - 34847ea1c0e6ecd3010d34d5391a57fbdf248c07 Search clang*.elf for ChromeOS toolchains.
  - f9184babb83aca4bb649ec101e1c2e48fc40f033 fix CaptureRawStringLiteral
  - 7c8a779e11f636ec5a8e0d643030bbd76a88ffdc Use real compiler path to find ChromeOS library deps.
  - 59ccc0c207f6c4ad6322335c6d8141f34afbe99c Roll boringssl from 354cd48f51ea to 782d9b6cf776 (1 revis...
  - 8f4e7b0b2e3490cc4b008d7dd7e617c7e035168c Roll boringssl from c5dc2781b197 to 354cd48f51ea (1 revis...
  - b55fc1365c05b1157ded9ec6343b71198881227a Roll boringssl from 2e54edf32337 to c5dc2781b197 (1 revis...
  - 7f6f10a22d79a521f75d384b61784466bb2f1361 Roll boringssl from eec7f3247034 to 2e54edf32337 (1 revis...
  - d6ce9ba4c460a0518b64a46a6a6b79caaa92ee61 Roll boringssl from 16c76acc78ef to eec7f3247034 (1 revis...
  - 44a5cf35de806b40489cffbd2871c3c5014d8908 Roll boringssl from ab7811ee8751 to 16c76acc78ef (2 revis...
  - 5aee65fed19c1fac1662aac5af3c63256eb73a97 Roll clang from 7a6a1f2ea259 to ba668f13d135 (1 revision)
  - 54c55e8e5955c65f293529a1ff947fb141521d9b Roll boringssl from daf1aca1a43a to ab7811ee8751 (1 revis...
  - ad09e645ad5f2cedee4bbed7f0a8f18b143a4bb3 Roll boringssl from b173d9191d08 to daf1aca1a43a (1 revis...
  - f7be86e838395c3df9db103fb8cf2a8d6e6a84f0 Roll clang from 74df6a1f7d60 to 7a6a1f2ea259 (1 revision)
  - 8b4a62670eb0d6f389eb5a3f9569ef82bc6373a1 Roll client/third_party/nasm/ 19f3fad68..e9be5fd6d (1 com...
  - 4f47c2facee5414c1f904ca5adbd5eb4b26777d8 Roll clang from d263cef9f9d5 to 74df6a1f7d60 (1 revision)
  - d9fc5e21f1d04659a43c75fa1b36de6bb84750bd Roll clang from 2fa8ccd14b52 to d263cef9f9d5 (1 revision)
  - b1ce39c92c2cb778edc038cae8cb7b94f72d39c6 Roll boringssl from 575d1128581c to b173d9191d08 (1 revis...
  - 515702d99b45aa011cfccac30aee3e44616277e8 Roll boringssl from 68a799af7f6a to 575d1128581c (1 revis...
  - 8c87b04ffc2ce04e108b3537ebcd62887394f623 Roll clang from d7dd881ddc4d to 2fa8ccd14b52 (1 revision)

GitOrigin-RevId: 34847ea1c0

--- a/client/cxx/BUILD.gn
+++ b/client/cxx/BUILD.gn
@@ -70,7 +70,9 @@ if (is_linux) {
     ]
 
     deps = [
+      "//base",
       "//client:common",
+      "//client:compiler_proxy_base_lib",
       "//client:file_path_util_lib",
       "//client/binutils:elf_dep_parser_lib",
       "//client/binutils:elf_parser_lib",
@@ -223,6 +225,7 @@ executable("gcc_compiler_info_builder_unittest") {
     ":gcc_compiler_info_builder_lib",
     "//build/config:exe_and_shlib_deps",
     "//client:common",
+    "//client:compiler_proxy_base_lib",
     "//client:goma_test_lib",
     "//client:subprocess_lib",
     "//lib",
