Import changes for goma client
  - bca8eb28c38d24105143fbcddc1d7ff28e1a10d2 Roll clang from d0c579267625 to 2c35569e9fff (1 revision)
  - de94decc7abb15cac11084d3dd58c68211522738 Roll clang from f915b6693077 to d0c579267625 (1 revision)
  - 5ba21cf9f82db0291fd056fe7213cb4471b75421 Roll clang from 293314acabd2 to f915b6693077 (1 revision)
  - ef9d98b0194dd96cb85f42f9b070502921ee43b1 use python3 for goma_{auth,ctl}.py
  - 092312c7e951e9953bbab788bee5b3c2e7018b17 Roll clang from ccc7ba229ab7 to 293314acabd2 (1 revision)
  - 38757a67ea933d66f2aa3ee08b2f299b70707635 Roll boringssl from 957f23d2c4cf to 62d6ed60dc19 (2 revis...
  - 45c6360d010a5e9757dfe09a63e21aace64fec2c Roll boringssl from 7ada84669278 to 957f23d2c4cf (1 revis...
  - 1afcf2c92e2cf97160efda189276201a48627aea Rebase all paths relative to the checkout directory.
  - 4d3865f08287ca46f20ecdef9046567a50a3c03d Roll clang from 36d1e52f707f to ccc7ba229ab7 (1 revision)
  - a7beaf551c7a788b8c4980b6e1086860536790f8 Roll clang from 0d51590148b2 to 36d1e52f707f (1 revision)
  - 4a232114167faed49ae02ee04b32bbafabbb0129 Roll clang from 081034a4ff04 to 0d51590148b2 (1 revision)
  - b1d3fd6649b29077ee86893ace274dbabfcc8ff6 Roll clang from e1e56a58075d to 081034a4ff04 (1 revision)
  - e9bff4e8c1057abeffe230cb82c13b81312b051d Roll clang from 268b0181cc89 to e1e56a58075d (1 revision)
  - 2a1c44155caa2a52e674796a15afd8440ae69ed0 Roll boringssl from 919a973930ad to 7ada84669278 (1 revis...
  - 72fb8661d85ebae4f82c4fed467ea1a6505e6279 Roll boringssl from ae7c17868992 to 919a973930ad (1 revis...
  - c18b97f4857eee8a3f58b0c7677a2059fa4380e9 Roll clang from c4699251c482 to 268b0181cc89 (1 revision)

GitOrigin-RevId: bca8eb28c38d24105143fbcddc1d7ff28e1a10d2
Change-Id: Ib43bdf8ab7b1fbc8e97ee69fff612eeecb9b378c
Bug: b/192813280

--- a/client/BUILD.gn
+++ b/client/BUILD.gn
@@ -198,7 +198,7 @@ action("gen_compiler_proxy_info") {
   outputs = [ "$target_gen_dir/compiler_proxy_info.h" ]
   args = [
     "--out-dir",
-    rebase_path("$target_gen_dir"),
+    rebase_path("$target_gen_dir", root_build_dir),
   ]
   public_configs = [ ":include_target_gen_dir" ]
 }
@@ -1018,18 +1018,18 @@ if (os != "win") {
       outputs = [ "$root_out_dir/sha256.json" ]
       args = [
         "--output",
-        rebase_path("$root_out_dir/sha256.json"),
-        rebase_path("$root_out_dir/compiler_proxy"),
-        rebase_path("$root_out_dir/compiler_proxy.sym"),
-        rebase_path("$root_out_dir/diagnose_goma_log.py"),
-        rebase_path("$root_out_dir/goma_auth.py"),
-        rebase_path("$root_out_dir/gomacc"),
-        rebase_path("$root_out_dir/gomacc.sym"),
-        rebase_path("$root_out_dir/goma_ctl.py"),
-        rebase_path("$root_out_dir/.vpython"),
-        rebase_path("$root_out_dir/goma_fetch"),
-        rebase_path("$root_out_dir/report_env.sh"),
-        rebase_path("$root_out_dir/LICENSE"),
+        rebase_path("$root_out_dir/sha256.json", root_build_dir),
+        rebase_path("$root_out_dir/compiler_proxy", root_build_dir),
+        rebase_path("$root_out_dir/compiler_proxy.sym", root_build_dir),
+        rebase_path("$root_out_dir/diagnose_goma_log.py", root_build_dir),
+        rebase_path("$root_out_dir/goma_auth.py", root_build_dir),
+        rebase_path("$root_out_dir/gomacc", root_build_dir),
+        rebase_path("$root_out_dir/gomacc.sym", root_build_dir),
+        rebase_path("$root_out_dir/goma_ctl.py", root_build_dir),
+        rebase_path("$root_out_dir/.vpython", root_build_dir),
+        rebase_path("$root_out_dir/goma_fetch", root_build_dir),
+        rebase_path("$root_out_dir/report_env.sh", root_build_dir),
+        rebase_path("$root_out_dir/LICENSE", root_build_dir),
       ]
     }
   }
@@ -1056,11 +1056,11 @@ if (os != "win") {
       outputs = [ "$root_out_dir/gomacc.sym" ]
       args = [
         "--dump_syms",
-        rebase_path("$root_out_dir/dump_syms.exe"),
+        rebase_path("$root_out_dir/dump_syms.exe", root_build_dir),
         "--input",
-        rebase_path("$root_out_dir/gomacc.exe"),
+        rebase_path("$root_out_dir/gomacc.exe", root_build_dir),
         "--output",
-        rebase_path("$root_out_dir/gomacc.sym"),
+        rebase_path("$root_out_dir/gomacc.sym", root_build_dir),
       ]
     }
 
@@ -1073,11 +1073,11 @@ if (os != "win") {
       outputs = [ "$root_out_dir/compiler_proxy.sym" ]
       args = [
         "--dump_syms",
-        rebase_path("$root_out_dir/dump_syms.exe"),
+        rebase_path("$root_out_dir/dump_syms.exe", root_build_dir),
         "--input",
-        rebase_path("$root_out_dir/compiler_proxy.exe"),
+        rebase_path("$root_out_dir/compiler_proxy.exe", root_build_dir),
         "--output",
-        rebase_path("$root_out_dir/compiler_proxy.sym"),
+        rebase_path("$root_out_dir/compiler_proxy.sym", root_build_dir),
       ]
     }
 
@@ -1100,23 +1100,23 @@ if (os != "win") {
       outputs = [ "$root_out_dir/sha256.json" ]
       args = [
         "--output",
-        rebase_path("$root_out_dir/sha256.json"),
-        rebase_path("$root_out_dir/compiler_proxy.exe"),
-        rebase_path("$root_out_dir/compiler_proxy.exe.pdb"),
-        rebase_path("$root_out_dir/compiler_proxy.sym"),
-        rebase_path("$root_out_dir/diagnose_goma_log.py"),
-        rebase_path("$root_out_dir/goma_auth.py"),
-        rebase_path("$root_out_dir/gomacc.exe"),
-        rebase_path("$root_out_dir/gomacc.exe.pdb"),
-        rebase_path("$root_out_dir/gomacc.sym"),
-        rebase_path("$root_out_dir/goma_ctl.bat"),
-        rebase_path("$root_out_dir/goma_ctl.py"),
-        rebase_path("$root_out_dir/.vpython"),
-        rebase_path("$root_out_dir/goma_fetch.exe"),
-        rebase_path("$root_out_dir/goma_fetch.exe.pdb"),
-        rebase_path("$root_out_dir/vcflags.exe"),
-        rebase_path("$root_out_dir/vcflags.exe.pdb"),
-        rebase_path("$root_out_dir/LICENSE"),
+        rebase_path("$root_out_dir/sha256.json", root_build_dir),
+        rebase_path("$root_out_dir/compiler_proxy.exe", root_build_dir),
+        rebase_path("$root_out_dir/compiler_proxy.exe.pdb", root_build_dir),
+        rebase_path("$root_out_dir/compiler_proxy.sym", root_build_dir),
+        rebase_path("$root_out_dir/diagnose_goma_log.py", root_build_dir),
+        rebase_path("$root_out_dir/goma_auth.py", root_build_dir),
+        rebase_path("$root_out_dir/gomacc.exe", root_build_dir),
+        rebase_path("$root_out_dir/gomacc.exe.pdb", root_build_dir),
+        rebase_path("$root_out_dir/gomacc.sym", root_build_dir),
+        rebase_path("$root_out_dir/goma_ctl.bat", root_build_dir),
+        rebase_path("$root_out_dir/goma_ctl.py", root_build_dir),
+        rebase_path("$root_out_dir/.vpython", root_build_dir),
+        rebase_path("$root_out_dir/goma_fetch.exe", root_build_dir),
+        rebase_path("$root_out_dir/goma_fetch.exe.pdb", root_build_dir),
+        rebase_path("$root_out_dir/vcflags.exe", root_build_dir),
+        rebase_path("$root_out_dir/vcflags.exe.pdb", root_build_dir),
+        rebase_path("$root_out_dir/LICENSE", root_build_dir),
       ]
     }
   }
