Import changes for goma client
  - 8997be122059586f749fbc6438c865484b375211 Follow up CL to fix build issue.
  - e4fea769592f0767dcff9e7e13fda38842f2d38b Make build/*.py compatible with pylint-2.6.
  - 0a1035caffae8cfa94ad91501eb65a00bcf89552 Pass FORCE_DISABLE_WERROR environment
  - 5892d6a5f5c39c469c116b82a98fc2c9f73fb487 Add autoroller service account in OWNERS
  - 13ceb1a36acbb741578aa5ba6a6f307e3f51b53f Roll clang from ac0a49ca33a6 to 5ab37cd7bdc3 (1 revision)
  - 50797da4f31f972f2d8020d12381e3df98b4932b Fix NaClCompilerInfoBuilderHelper::CollectNaClClangResource
  - 746c0e76fa8db3bcc162dd3c9f56dbccea3e0658 Roll boringssl from d55f450c4fa6 to c6d3fd1d0972 (1 revis...
  - ace0d545baeb6d7cdc50224468c89e07555a12b8 Remove .vpython3.
  - 1199c06eab2f37a371390311bb41d9f2eb610716 Roll boringssl from a75027b0401c to d55f450c4fa6 (1 revis...
  - 7367304867163b432afa3109d97d3db713754ad3 Roll boringssl from e2cb423767cc to a75027b0401c (1 revis...
  - 7b3c103b1e9351cfecbf384fb8ca8995a25da491 Roll boringssl from 61f320874be3 to e2cb423767cc (1 revis...
  - b1842861cb45cfd14cdb72c92c89f9abbe845f57 Roll clang from 3f6acf9843fb to ac0a49ca33a6 (1 revision)
  - 84fccef49913f47a7c2add7309d68bad9a43bd01 Roll clang from cb4a58d41460 to 3f6acf9843fb (2 revisions)
  - 5dd564f613243fb2d03549237b470b6ae4780121 Roll boringssl from 4bf0a19ac843 to 61f320874be3 (3 revis...
  - 7dc8eb4d8621753487a76941a2ab018f6cc69859 Roll boringssl from 047ff6428714 to 4bf0a19ac843 (7 revis...
  - da84c4c8092b1b0c685e85c59e600aa4264ff4da Make gn scripts run with python3.
  - 9f31575f4838e806a795e1131b7a98244a967fdc Fix NaClCompilerInfoBuilderHelper::CollectNaClClangResour...
  - 4a9b914231a4851bd83a76fa63e6dad3b8e86e14 Updated minimum macOS version.
  - ea2ea371d0b6b260bc314ee9b1e9728014d11dd4 Make dump_syms.py works with Python3.
  - 12c629585c175a1b8c620b8067185e5554df1fdf cleanup: make mac_sdk.gni depends on third_party/chromium...
  - 0f82cf585dde33d78aeecc52dd3de7b932cbdbab Roll clang from 6002926a

--- a/client/BUILD.gn
+++ b/client/BUILD.gn
@@ -3,8 +3,8 @@
 # found in the LICENSE file.
 generate_compiler_proxy_info = "generate_compiler_proxy_info.py"
 
-import("//build/util/lastchange.gni")
 import("//testing/libfuzzer/fuzzer_test.gni")
+import("//third_party/chromium_build/util/lastchange.gni")
 import("//third_party/protobuf/proto_library.gni")
 
 group("client") {
@@ -919,11 +919,6 @@ copy("copy_goma_ctl_py") {
   outputs = [ "$root_out_dir/{{source_file_part}}" ]
 }
 
-copy("copy_vpython") {
-  sources = [ "//.vpython" ]
-  outputs = [ "$root_out_dir/{{source_file_part}}" ]
-}
-
 copy("copy_diagnose_goma_log_py") {
   sources = [ "diagnose_goma_log.py" ]
   outputs = [ "$root_out_dir/{{source_file_part}}" ]
@@ -1007,7 +1002,6 @@ if (os != "win") {
         ":copy_diagnose_goma_log_py",
         ":copy_goma_auth_py",
         ":copy_goma_ctl_py",
-        ":copy_vpython",
         ":dump_compiler_proxy_symbols",
         ":dump_gomacc_symbols",
         ":generate_license",
@@ -1026,7 +1020,6 @@ if (os != "win") {
         rebase_path("$root_out_dir/gomacc", root_build_dir),
         rebase_path("$root_out_dir/gomacc.sym", root_build_dir),
         rebase_path("$root_out_dir/goma_ctl.py", root_build_dir),
-        rebase_path("$root_out_dir/.vpython", root_build_dir),
         rebase_path("$root_out_dir/goma_fetch", root_build_dir),
         rebase_path("$root_out_dir/report_env.sh", root_build_dir),
         rebase_path("$root_out_dir/LICENSE", root_build_dir),
@@ -1088,7 +1081,6 @@ if (os != "win") {
         ":copy_diagnose_goma_log_py",
         ":copy_goma_auth_py",
         ":copy_goma_ctl_py",
-        ":copy_vpython",
         ":dump_compiler_proxy_symbols",
         ":dump_gomacc_symbols",
         ":generate_license",
@@ -1111,7 +1103,6 @@ if (os != "win") {
         rebase_path("$root_out_dir/gomacc.sym", root_build_dir),
         rebase_path("$root_out_dir/goma_ctl.bat", root_build_dir),
         rebase_path("$root_out_dir/goma_ctl.py", root_build_dir),
-        rebase_path("$root_out_dir/.vpython", root_build_dir),
         rebase_path("$root_out_dir/goma_fetch.exe", root_build_dir),
         rebase_path("$root_out_dir/goma_fetch.exe.pdb", root_build_dir),
         rebase_path("$root_out_dir/vcflags.exe", root_build_dir),
