--- a/.gn
+++ b/.gn
@@ -3,6 +3,7 @@
 # found in the LICENSE file.
 
 # Copied from chromium's src/.gn.
+# but not following the original any more.
 #
 # This file is used by the experimental meta-buildsystem in src/tools/gn to
 # find the root of the source tree and to set startup options.
@@ -10,7 +11,6 @@
 # The location of the build configuration file.
 buildconfig = "//build/config/BUILDCONFIG.gn"
 
-# The secondary source root is a parallel directory tree where
-# GN build files are placed when they can not be placed directly
-# in the source tree, e.g. for third party source trees.
-secondary_source = "//build/secondary/"
+# The python interpreter to use by default. On Windows, this will look
+# for python3.exe and python3.bat.
+script_executable = "python3"
