Import changes for goma client
  - 9a3af204e5ef63714009d6c4da239bc80ba452fc Roll clang from c06edd1f4551 to 203feb789163 (4 revisions)
  - 72c0a287cc93a3b5afdff86e1cbb341256f4e35d Roll boringssl from 87f316d77482 to 45c8be91f347 (13 revi...
  - 5bb0d0f50ba796fb3d125ef0ac614e08eccf2c25 update roots.pem from https://pki.goog/roots.pem

GitOrigin-RevId: 9a3af204e5ef63714009d6c4da239bc80ba452fc
Change-Id: Ie8ecbd1c751d92e4762cb8833abdc227789f5f2d

--- a/client/certs/BUILD.gn
+++ b/client/certs/BUILD.gn
@@ -22,21 +22,6 @@ if (os != "win") {
     ]
   }
 
-  action("gen_dst_certs") {
-    script = genc
-    sources = [ "DST_Root_CA_X3.pem" ]
-    outputs = [
-      "$target_gen_dir/DST_Root_CA_X3.c",
-      "$target_gen_dir/DST_Root_CA_X3.h",
-    ]
-    args = [
-      "--prefix=certs_",
-      "--out-dir",
-      rebase_path("$target_gen_dir", root_build_dir),
-      rebase_path("DST_Root_CA_X3.pem", root_build_dir),
-    ]
-  }
-
   config("certs_config") {
     include_dirs = [ "$target_gen_dir" ]
   }
@@ -44,13 +29,8 @@ if (os != "win") {
     sources = [
       "$target_gen_dir/$roots.c",
       "$target_gen_dir/$roots.h",
-      "$target_gen_dir/DST_Root_CA_X3.c",
-      "$target_gen_dir/DST_Root_CA_X3.h",
     ]
-    deps = [
-      ":gen_dst_certs",
-      ":gen_roots_certs",
-    ]
+    deps = [ ":gen_roots_certs" ]
     public_configs = [ ":certs_config" ]
   }
 } else {  # os == "win"
@@ -66,9 +46,6 @@ if (os != "win") {
       "certs_resource.h",
     ]
     public_configs = [ ":certs_resource_config" ]
-    data = [
-      "DST_Root_CA_X3.pem",
-      "$roots.pem",
-    ]
+    data = [ "$roots.pem" ]
   }
 }
