--- a/client/certs/certs.rc
+++ b/client/certs/certs.rc
@@ -1,5 +1,4 @@
-// Copyright 2014 Google Inc. All Rights Reserved.
+// Copyright 2014 Google LLC. All Rights Reserved.
 
 #include "certs_resource.h"
 ROOT_CA_NAME RCDATA "roots.pem"
-DST_CA_NAME RCDATA "DST_Root_CA_X3.pem"
