Import changes for goma client
  - 5c913b7a9f622fa32f971f0bf5bec0170b3557cb base: use default member initializer
  - e2f759cb88faaed90a6374adb766504f53e2a1ea Change #define's around MinGW GCC differences from MSVC
  - 0a2e078d8094da1dc00d1ea5611964f43cbfdb96 Roll clang from 203feb789163 to c00aa1000954 (3 revisions)
  - 6fb9ccfa3cc628f0fa67425e4c42c8d4818f6c9d Tweak win gcc warns and errors for third_party/chromium_b...
  - 7c3e18700600a9eae782af239a7fd98f60343f82 Roll boringssl from 45c8be91f347 to f6ef1c560ae5 (2 revis...
  - fd61180b2e7d61a0875e98601bdc36410505c87d Tweak win gcc warns and errors for benchmark/boringssl/br...
  - 213cec05df7ea43ab4bdabd0a221e342b84b2f1b Tweak configs to compile protoc on windows with gcc
  - 5fb72e6995fd31cf5a1ecf6fea54328d50baeff7 Tweak configs to compile zlib and gflags on win with gcc.
  - 5f2e743e8611d3044384d40613e22bc44ea27ec5 Add `is_win_gcc` gn flag to use gcc based build on windows.
  - 68a3e6c4cbf7143ce874621e82961d93dce31d66 Add check for HAVE_UNISTD_H in glog win configs.
  - 8fe0f6cb141828493201e95085eb12d427b56b52 roll glog to 0.5.0
  - c98523f933958c9911afeccc557871382ac70a51 Tweak jsoncpp build rules to not yell warnings on gcc on ...
  - fa32166c3b831a57352cb645a2aef30dfec8abf6 Branch glog windows configs to support HAVE_UNISTD_H.
  - 62f2bb6329388369e5d7faa0782584d2a99c955b goma_ctl.py: sys.stderr.write uses \n

Bug: 1256422
GitOrigin-RevId: 5c913b7a9f622fa32f971f0bf5bec0170b3557cb
Change-Id: I3d8b993703b2b0d041f944984757d90b61b61297

--- a/base/BUILD.gn
+++ b/base/BUILD.gn
@@ -42,10 +42,12 @@ static_library("base") {
       "socket_helper_win.h",
     ]
 
-    cflags = [
-      # These warnings come from int and SOCKET type mismatch.
-      "/wd4309",  # Truncation of constant value
-    ]
+    if (!is_win_gcc) {
+      cflags = [
+        # These warnings come from int and SOCKET type mismatch.
+        "/wd4309",  # Truncation of constant value
+      ]
+    }
   }
   public_configs = [ ":base_config" ]
 }
