Import changes for goma client
  - c2c764f4748912bd04f0c443f0849e17fd4214fe Final MinGW tweaks.
  - 1b6fcebe2142e617629b5d54dcb304f1381a5f6d Further MinGW tweaks
  - 9a0085dc3f2522eba42550ae2cf7a67773b92624 Remove warnings and tweak MinGW specifics.
  - 7d8dff9372864589f6fc065c79863c7440b98907 Tweak base configs to use appropriate warn on gcc.
  - 4c973fc312cbea2f36bca8ea43701d7d60b4b199 Remove remaining #pragma comment statements on MinGW
  - 63df23d748525163bcbfde31f65c4807bedee525 Add link libraries in MinGW
  - 7eecc1260ad6753020aa6e63c5dee132b7dab995 Fix more MinGW protobuf warnings

GitOrigin-RevId: c2c764f4748912bd04f0c443f0849e17fd4214fe
Change-Id: I3771f0c0778a80ea1a150c2843576a3d1831bdcb

--- a/base/BUILD.gn
+++ b/base/BUILD.gn
@@ -12,6 +12,10 @@ config("base_config") {
   if (use_absl_backed_sync_primitives) {
     cflags += [ "-DUSE_ABSL_BACKED_SYNC_PRIMITIVES" ]
   }
+  if (is_win_gcc) {
+    # Used by base/socket_helper_win.cc
+    libs = [ "ws2_32" ]
+  }
 }
 
 static_library("base") {
