Import changes for goma client
  - 0ef74a8fa70306a248e9757560f3b1c2cd5ee252 Use go 1.17.2
  - 1803c7203825e1b28b1ae0252dea85356cb05ae3 fix for copybara check
  - 354612ebbd769110ba820c693d91cd0592f6c6cf drop __unsafe_unretained from KNOWN_ATTRIBUTES
  - d9d2e39896d973ca1ecc9ec218c327a224e74fe9 use io package instead of ioutil package
  - 148b60b30807c01e91270438b096478c19df539e fix presubmit warnings
  - 8457f4270961eb58435e9ec165795caf0d5a3083 diagnose_goma_log: support new glog format
  - ed6399bf3cb880fb19f11ef92b879f2d58922130 log stdout/stderr of feature/extension detection
  - c889dc189f12ff2aec8f8d443a93a48d68cdfbf1 Roll clang from c00aa1000954 to e193c0af0ae8 (6 revisions)
  - f02e977a2f3e3d71a214c33ab3a7fdb0a0248c3e Introduce agnostic goma build info metadata.
  - ac85ad65c774cb270bab4e27737f6f1e2f5ccd32 update simpletry.sh
  - a0aeb6049cf2d0fa3d7714c6fd2b2ec3a13ff274 Add SDKSettings.json in sysroot

GitOrigin-RevId: 0ef74a8fa70306a248e9757560f3b1c2cd5ee252
Change-Id: I24a79d55f9be046d1e2d4b9e20ac275a2871b81e

--- a/client/BUILD.gn
+++ b/client/BUILD.gn
@@ -1,6 +1,11 @@
 # Copyright 2014 The Goma Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+declare_args() {
+  # If true, doesn't try getting information to embed on the current build.
+  agnostic_build = false
+}
+
 generate_compiler_proxy_info = "generate_compiler_proxy_info.py"
 
 import("//testing/libfuzzer/fuzzer_test.gni")
@@ -215,6 +220,9 @@ action("gen_compiler_proxy_info") {
     "--out-dir",
     rebase_path("$target_gen_dir", root_build_dir),
   ]
+  if (agnostic_build) {
+    args += [ "--agnostic" ]
+  }
   public_configs = [ ":include_target_gen_dir" ]
 }
 
